# beyond-100-test-cov

./: .gitignore  Makefile  README.md  data.csv  pyproject.toml  requirements.in  requirements.txt
src/: swedish_cities_v1.py  swedish_cities_v2.py  swedish_cities_v2_typed.py
tests/: conftest.py  test_data.csv  test_v1.py  test_v2.py  test_v2_typed.py
